<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="Notification">
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_switch_daily_reminder"
            android:title="Daily Reminder" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_switch_release_reminder"
            android:title="Release Today Reminder" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Other">
        <Preference android:title="@string/language"
            android:key="@string/pref_btn_change_lang"
            android:summary="Change language to En or Id"/>
    </PreferenceCategory>

</PreferenceScreen>