<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/all_margin_layout"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/vertical_margin_layout"
            tools:text="Title"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/img_poster_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:src="@color/black"
            android:minHeight="500dp"
            android:layout_marginBottom="@dimen/vertical_margin_layout" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_orilang_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:textColor="@color/black"
                android:text="@string/detail_language" />

            <TextView
                android:id="@+id/tv_rating_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_weight="0.7"
                android:text="@string/detail_rating" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_releaseDate_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:textColor="@color/black"
            android:text="@string/detail_release_date"
            android:layout_marginBottom="@dimen/vertical_margin_layout"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/detail_overview" />

        <TextView
            android:id="@+id/tv_overview_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            tools:text="@string/lorem_ipsum"/>
    </LinearLayout>

</ScrollView>